--- a/index.html
+++ b/index.html
@@ -1,101 +1,109 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Declaração de Amor</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- TELA INICIAL -->
-<div class="landing-wrap" id="landingWrap">
-  <button id="launchBtn">Clique aqui</button>
+<div id="landingWrap">
   <canvas id="launchParticles"></canvas>
+  <button id="launchBtn">Clique aqui</button>
 </div>
 
-<!-- BACKGROUND ESTRELAS -->
-<canvas id="starCanvas"></canvas>
+<!-- SITE REAL -->
+<div id="appWrap" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; display:flex; align-items:center; justify-content:center;">
+  <canvas id="starCanvas"></canvas>
+  <div class="app-wrap">
+    <main class="container">
 
-<div class="app-wrap" id="appWrap" style="display:none;">
-  <main class="container">
-    <!-- FORM SIDE -->
-    <section class="form-side">
-      <div class="steps-indicator" id="stepsIndicator">
-        <div class="step-dot">1</div>
-        <div class="step-dot">2</div>
-        <div class="step-dot">3</div>
-        <div class="step-dot">4</div>
-        <div class="step-dot">5</div>
-        <div class="step-dot">6</div>
-      </div>
-      <form id="declarationForm" autocomplete="off">
-        <div class="step active">
-          <label>Seu nome</label>
-          <input id="senderName" type="text" />
-          <div class="btn-group"><button type="button" class="next-btn">Próximo</button></div>
+      <!-- FORM SIDE -->
+      <section class="form-side">
+        <div class="steps-indicator" id="stepsIndicator">
+          <div class="step-dot">1</div>
+          <div class="step-dot">2</div>
+          <div class="step-dot">3</div>
+          <div class="step-dot">4</div>
+          <div class="step-dot">5</div>
+          <div class="step-dot">6</div>
         </div>
-        <div class="step">
-          <label>Nome da pessoa amada</label>
-          <input id="recipientName" type="text" />
-          <div class="btn-group">
-            <button type="button" class="prev-btn">Anterior</button>
-            <button type="button" class="next-btn">Próximo</button>
-          </div>
-        </div>
-        <div class="step">
-          <label>Declaração</label>
-          <textarea id="message" rows="4"></textarea>
-          <div class="btn-group">
-            <button type="button" class="prev-btn">Anterior</button>
-            <button type="button" class="next-btn">Próximo</button>
-          </div>
-        </div>
-        <div class="step">
-          <label>Data especial (ano-mês-dia)</label>
-          <input id="specialDate" type="date" />
-          <div class="btn-group">
-            <button type="button" class="prev-btn">Anterior</button>
-            <button type="button" class="next-btn">Próximo</button>
-          </div>
-        </div>
-        <div class="step">
-          <label>Fotos (até 5)</label>
-          <input id="photos" type="file" accept="image/*" multiple />
-          <div class="btn-group">
-            <button type="button" class="prev-btn">Anterior</button>
-            <button type="button" class="next-btn">Próximo</button>
-          </div>
-        </div>
-        <div class="step">
-          <label>Link da música (YouTube)</label>
-          <input id="youtubeUrl" type="text" placeholder="https://www.youtube.com/watch?v=..." />
-          <div class="btn-group">
-            <button type="button" class="prev-btn">Anterior</button>
-            <button type="submit" class="finish-btn">Finalizar</button>
-          </div>
-        </div>
-      </form>
-    </section>
 
-    <!-- PREVIEW SIDE -->
-    <section class="preview-side">
-      <div class="card">
-        <h2 id="previewRecipient">Nome da pessoa 💖</h2>
-        <div class="slideshow-box">
-          <div class="slides-wrapper" id="slidesWrapper"></div>
+        <form id="declarationForm" autocomplete="off">
+          <div class="step active">
+            <label class="color-name">Seu nome</label>
+            <input id="senderName" type="text">
+            <div class="btn-group"><button type="button" class="next-btn">Próximo</button></div>
+          </div>
+
+          <div class="step">
+            <label>Nome da pessoa amada</label>
+            <input id="recipientName" type="text">
+            <div class="btn-group">
+              <button type="button" class="prev-btn">Anterior</button>
+              <button type="button" class="next-btn">Próximo</button>
+            </div>
+          </div>
+
+          <div class="step">
+            <label>Declaração</label>
+            <textarea id="message" rows="4"></textarea>
+            <div class="btn-group">
+              <button type="button" class="prev-btn">Anterior</button>
+              <button type="button" class="next-btn">Próximo</button>
+            </div>
+          </div>
+
+          <div class="step">
+            <label>Data especial (ano-mês-dia)</label>
+            <input id="specialDate" type="date">
+            <div class="btn-group">
+              <button type="button" class="prev-btn">Anterior</button>
+              <button type="button" class="next-btn">Próximo</button>
+            </div>
+          </div>
+
+          <div class="step">
+            <label>Fotos (até 5)</label>
+            <input id="photos" type="file" accept="image/*" multiple>
+            <div class="btn-group">
+              <button type="button" class="prev-btn">Anterior</button>
+              <button type="button" class="next-btn">Próximo</button>
+            </div>
+          </div>
+
+          <div class="step">
+            <label>Link da música (YouTube)</label>
+            <input id="youtubeUrl" type="text" placeholder="https://www.youtube.com/watch?v=...">
+            <div class="btn-group">
+              <button type="button" class="prev-btn">Anterior</button>
+              <button type="submit" class="finish-btn">Finalizar</button>
+            </div>
+          </div>
+        </form>
+      </section>
+
+      <!-- PREVIEW SIDE -->
+      <section class="preview-side">
+        <div class="card">
+          <h2 id="previewRecipient">Nome da pessoa 💖</h2>
+          <div class="slideshow-box">
+            <div class="slides-wrapper" id="slidesWrapper"></div>
+          </div>
+          <div class="timer-row">
+            <div id="timerText" class="timer-text">00 anos 00 meses 00 dias 00:00:00</div>
+          </div>
+          <p id="previewMessage" class="preview-message">Sua mensagem aparecerá aqui...</p>
+          <p class="preview-from">De: <span id="previewSender">Você</span></p>
         </div>
-        <div class="timer-row">
-          <div id="timerText" class="timer-text">00 anos 00 meses 00 dias 00:00:00</div>
-        </div>
-        <p id="previewMessage" class="preview-message">Sua mensagem aparecerá aqui...</p>
-        <p class="preview-from">De: <span id="previewSender">Você</span></p>
-        <div id="previewYoutube" style="margin-top:10px;"></div>
-      </div>
-    </section>
-  </main>
+      </section>
+
+    </main>
+  </div>
 </div>
 
-<script src="node.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
