--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <div id="landingWrap">
   <canvas id="launchParticles"></canvas>
   <button id="launchBtn">Clique aqui</button>
+  <div id="circleExpand" aria-hidden="true"></div>
 </div>
 
 <!-- SITE REAL -->
-<div id="appWrap" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; display:flex; align-items:center; justify-content:center;">
+<div id="appWrap" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity 700ms ease;">
   <canvas id="starCanvas"></canvas>
   <div class="app-wrap">
     <main class="container">
@@ -104,6 +105,5 @@
   </div>
 </div>
 
-<script src="node.js"></script>
+<script src="script.js"></script>
 </body>
-</html>
