adicionou preview em formato de celular

--- a/index.html
+++ b/index.html
@@ -78,18 +78,28 @@
           </form>
         </section>
 
-        <!-- PREVIEW SIDE -->
+        <!-- PREVIEW SIDE (CELULAR) -->
         <section class="preview-side">
-          <div class="card">
-            <h2 id="previewRecipient">Nome da pessoa 💖</h2>
-            <div class="slideshow-box">
-              <div class="slides-wrapper" id="slidesWrapper"></div>
+          <div class="phone-frame">
+            <div class="phone-notch"></div>
+            <div class="phone-content">
+              <div class="card">
+                <h2 id="previewRecipient">Nome da pessoa 💖</h2>
+                <div class="slideshow-box">
+                  <div class="slides-wrapper" id="slidesWrapper"></div>
+                </div>
+                <div class="timer-row">
+                  <div id="timerText" class="timer-text">00 anos 00 meses 00 dias 00:00:00</div>
+                </div>
+                <p id="previewMessage" class="preview-message">Sua mensagem aparecerá aqui...</p>
+                <p class="preview-from">De: <span id="previewSender">Você</span></p>
+              </div>
             </div>
-            <div class="timer-row">
-              <div id="timerText" class="timer-text">00 anos 00 meses 00 dias 00:00:00</div>
+            <div class="phone-nav">
+              
+              <div class="nav-dot"></div>
+             
             </div>
-            <p id="previewMessage" class="preview-message">Sua mensagem aparecerá aqui...</p>
-            <p class="preview-from">De: <span id="previewSender">Você</span></p>
           </div>
         </section>
       </main>
