--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.9">
+ <meta name="viewport" 
+      content="width=device-width, height=device-height, initial-scale=0.9, maximum-scale=1.0, viewport-fit=cover">
+
   <title>Declaração de Amor</title>
   <link rel="stylesheet" href="style.css">
 </head>
