--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
- <meta name="viewport" 
-      content="width=device-width, height=device-height, initial-scale=0.9, maximum-scale=1.0, viewport-fit=cover">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Declaração de Amor</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +15,7 @@
   </div>
 
   <!-- SITE REAL -->
-  <div id="appWrap" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity 700ms ease;">
+  <div id="appWrap">
     <canvas id="starCanvas"></canvas>
     <div class="app-wrap">
       <main class="container">
@@ -98,9 +96,7 @@
               </div>
             </div>
             <div class="phone-nav">
-              
               <div class="nav-dot"></div>
-             
             </div>
           </div>
         </section>
