teste push.html

--- a/formulario/index.html
+++ b/formulario/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Declaração de Amor</title>
-  <link rel="stylesheet" href="../formulario e preview/styles/index.css">
+  <link rel="stylesheet" href="../formulario/styles/index.css">
 </head>
 <body>
   <!-- TELA INICIAL -->
@@ -130,7 +130,7 @@
   </div>
 
   <!-- SCRIPT PRINCIPAL -->
-  <script src="../formulario e preview/script.js"></script>
+  <script src="../formulario/script.js"></script>
 
 
 </body>
