--- a/push.html
+++ b/push.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=nome-da-pasta/index.html">
+  <meta http-equiv="refresh" content="0; url=formulario/index.html">
   <title>Redirecionando...</title>
 </head>
 <body>
-  <p>Se você não for redirecionado, <a href="nome-da-pasta/index.html">clique aqui</a>.</p>
+  <p>Se você não for redirecionado, <a href="formulario/index.html">clique aqui</a>.</p>
 </body>
 </html>
