--- a/formulario/index.html
+++ b/formulario/index.html
@@ -97,15 +97,16 @@
                 <h2 id="previewRecipient">Nome da pessoa 💖</h2>
 
                 <!-- Aqui o livro é exibido em tamanho reduzido -->
-                 <div class="livro">
-                <iframe
-                  id="bookPreview"
-                  src="../livro/index.html"
-                  style="width: 700px; height: 290px; border: none; overflow: hidden;"
-                  scrolling="no">
-                </iframe>
-              </div>
-              
+                <div class="livro">
+ <iframe
+  id="bookPreview"
+  src="../livro/index.html?modo=preview"
+  style="width: 250px; height: 280px; border: none; overflow: visible; margin-top: 40px; margin-bottom: -50px;"
+  scrolling="no">
+</iframe>
+
+
+
                 <div class="timer-row">
                   <div id="timerText" class="timer-text">
                     00 anos 00 meses 00 dias 00:00:00
